--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,7 @@
 
     <color name="background_color">#EFF2F6</color>
     <color name="foreground_color">#FFFFFF</color>
+    <color name="shimmer_background_color">#CDCDCD</color>
 
     <color name="link_color_night">#3A4ECD</color>
     <color name="header_color_night">#DDDDDD</color>
@@ -38,6 +39,7 @@
 
     <color name="background_color_night">#000</color>
     <color name="foreground_color_night">#1E1E1E</color>
+    <color name="shimmer_background_color_night">#2D2D2D</color>
 
 
 
