--- a/app/src/main/res/drawable/ic_shimmer_circle_24.xml
+++ b/app/src/main/res/drawable/ic_shimmer_circle_24.xml
@@ -3,7 +3,7 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@color/gray">
+    android:tint="?attr/shimmerBackgroundColor">
   <path
       android:pathData="M0,12a12,12 0,1 0,24 0a12,12 0,1 0,-24 0z"
       android:fillColor="#FFF"/>
