--- a/app/src/main/res/layout/item_circle_profile.xml
+++ b/app/src/main/res/layout/item_circle_profile.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_circle_24" />
+        app:srcCompat="@drawable/ic_shimmer_circle_24" />
 
     <TextView
         android:id="@+id/full_name_text_view"
