--- a/app/src/main/res/layout/item_friend_request.xml
+++ b/app/src/main/res/layout/item_friend_request.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/avatar"
+        android:id="@+id/avatar_image_view"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_marginStart="16dp"
@@ -22,15 +22,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/avatar"
+        app:layout_constraintStart_toEndOf="@+id/avatar_image_view"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/chatTitle"
+            android:id="@+id/full_name_text_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textAppearance="@style/Chats.Header"
@@ -40,18 +40,37 @@
 
         <Button
             android:id="@+id/accept_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/background_button_primary"
+            android:text="Accept"
+            android:textAllCaps="false"
+            android:textAppearance="@style/Profile.Button"
+            android:textFontWeight="600"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toStartOf="@+id/reject_button"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/chatTitle"
-            android:text="ACCEPT"/>
+            app:layout_constraintTop_toBottomOf="@id/full_name_text_view" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/reject_button"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/background_button_danger"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:text="Reject"
+            android:textAllCaps="false"
+            android:textAppearance="@style/Profile.Button"
+            android:textFontWeight="600"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/accept_button"
-            app:layout_constraintTop_toBottomOf="@id/chatTitle"
-            android:text="REJECT"/>
+            app:layout_constraintTop_toBottomOf="@id/full_name_text_view" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
