--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,19 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.Social" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Windows background color. -->
-        <item name="android:colorBackground">@color/black</item>
+        <item name="android:colorBackground">@color/background_color_night</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:statusBarColor">@color/background_color_night</item>
 
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
-
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorPrimary">@color/primary_color</item>
+        <item name="colorPrimaryVariant">@color/primary_color</item>
+        <item name="colorOnPrimary">@color/white</item>
 
         <!-- Text color. -->
         <item name="textColorPrimary">@color/white</item>
@@ -37,6 +32,14 @@
         <item name="backgroundButtonColor">@color/active_button_color_night</item>
         <item name="backgroundDisableButtonColor">@color/disable_button_color_night</item>
         <item name="backgroundPressedButtonColor">@color/pressed_active_button_color_night</item>
+
+        <!-- Button colors -->
+        <item name="primaryButtonBackgroundColor">@color/active_button_color</item>
+        <item name="primaryDisableButtonBackgroundColor">@color/disable_button_color</item>
+        <item name="primaryPressedButtonBackgroundColor">@color/pressed_active_button_color</item>
+        <item name="dangerButtonBackgroundColor">@color/danger_button_background_color_night</item>
+        <item name="dangerDisableButtonBackgroundColor">@color/danger_disable_button_background_color_night</item>
+        <item name="dangerPressedButtonBackgroundColor">@color/danger_pressed_button_background_color_night</item>
     </style>
 
 </resources>
