--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="dark_gray">#3C3C3C</color>
     <color name="gray">#A0A0A0</color>
@@ -12,6 +7,13 @@
     <color name="error">#D32F2F</color>
     <color name="warning">#FFD166</color>
     <color name="warning_corner">#AC8D46</color>
+
+    <!-- Primary color -->
+    <color name="primary_color">#ff0f6fec</color>
+    <color name="primary_color_night">#ff0f6fec</color>
+    <!-- Background color -->
+    <color name="background_color">#EFF2F6</color>
+    <color name="background_color_night">#000000</color>
 
     <color name="link_color">#0f6fec</color>
     <color name="header_color">#14191e</color>
@@ -23,7 +25,13 @@
     <color name="disable_button_color">#7D7D7D</color>
     <color name="pressed_active_button_color">#0C59BD</color>
 
-    <color name="background_color">#EFF2F6</color>
+    <color name="danger_button_background_color_night">#4DD6293E</color>
+    <color name="danger_disable_button_background_color_night">#A3A3A3</color>
+    <color name="danger_pressed_button_background_color_night">#D6293E</color>
+    <color name="danger_button_background_color">#4DD6293E</color>
+    <color name="danger_disable_button_background_color">#A3A3A3</color>
+    <color name="danger_pressed_button_background_color">#D6293E</color>
+
     <color name="foreground_color">#FFFFFF</color>
     <color name="shimmer_background_color">#CDCDCD</color>
 
@@ -37,7 +45,6 @@
     <color name="disable_button_color_night">#969696</color>
     <color name="pressed_active_button_color_night">#0C59BD</color>
 
-    <color name="background_color_night">#000</color>
     <color name="foreground_color_night">#1E1E1E</color>
     <color name="shimmer_background_color_night">#2D2D2D</color>
 
