--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,15 @@
 <resources>
     <!-- Base application theme. -->
     <style name="Theme.Social" parent="Theme.AppCompat.Light.NoActionBar">
-<!--        &lt;!&ndash; Windows background color. &ndash;&gt;-->
-<!--        <item name="android:background">@color/black</item>-->
-<!--        <item name="android:colorBackground">@color/black</item>-->
-<!--        <item name="android:windowBackground">@color/black</item>-->
+        <!-- Windows background color. -->
+        <item name="android:colorBackground">@color/background_color</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#E1E1E1</item>
+        <item name="android:statusBarColor">@color/background_color</item>
 
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/primary_color</item>
+        <item name="colorPrimaryVariant">@color/primary_color</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
 
         <!-- Text color. -->
         <item name="textColorPrimary">@color/black</item>
@@ -38,6 +32,15 @@
         <item name="backgroundButtonColor">@color/active_button_color</item>
         <item name="backgroundDisableButtonColor">@color/disable_button_color</item>
         <item name="backgroundPressedButtonColor">@color/pressed_active_button_color</item>
+
+        <!-- Button colors -->
+        <item name="primaryButtonBackgroundColor">@color/active_button_color</item>
+        <item name="primaryDisableButtonBackgroundColor">@color/disable_button_color</item>
+        <item name="primaryPressedButtonBackgroundColor">@color/pressed_active_button_color</item>
+        <item name="dangerButtonBackgroundColor">@color/danger_button_background_color</item>
+        <item name="dangerDisableButtonBackgroundColor">@color/danger_disable_button_background_color</item>
+        <item name="dangerPressedButtonBackgroundColor">@color/danger_pressed_button_background_color</item>
+
     </style>
 
     <!-- Text styles: -->
