--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -19,6 +19,7 @@
     <attr name="borderEditTextColor" format="reference" />
     <attr name="borderFocusedEditTextColor" format="reference" />
     <attr name="buttonTextColor" format="reference" />
+    <attr name="friendColor" format="reference" />
 
     <!-- Button -->
     <!-- Button.Primary -->
