--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -33,4 +33,9 @@
     <attr name="backgroundButtonColor" format="reference" />
     <attr name="backgroundPressedButtonColor" format="reference" />
     <attr name="backgroundDisableButtonColor" format="reference" />
+
+    <!-- Clickable -->
+    <attr name="clickableTransparentPrimaryColor" format="reference" />
+    <attr name="clickableTransparentSecondColor" format="reference" />
+
 </resources>
