--- a/app/src/main/res/layout/activity_email_confirm.xml
+++ b/app/src/main/res/layout/activity_email_confirm.xml
@@ -81,7 +81,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/sign_me_button"
+        android:id="@+id/confirm_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
