--- a/app/src/main/res/layout/activity_profile_setting.xml
+++ b/app/src/main/res/layout/activity_profile_setting.xml
@@ -157,7 +157,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/birthday_edit_text" />
+            app:layout_constraintTop_toBottomOf="@+id/gender_radio_group" />
 
         <TextView
             android:id="@+id/account_settings_text_view"
@@ -213,6 +213,44 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/abc_ic_ab_back_material" />
+
+        <TextView
+            android:id="@+id/gender_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Gender"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="@+id/birthday_edit_text"
+            app:layout_constraintTop_toBottomOf="@+id/birthday_edit_text" />
+
+        <RadioGroup
+            android:id="@+id/gender_radio_group"
+            android:orientation="horizontal"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/gender_text_view" >
+
+            <RadioButton
+                android:id="@+id/male_gender_radio_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:checked="true"
+                android:text="Male" />
+
+            <RadioButton
+                android:id="@+id/female_gender_radio_button"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Female" />
+        </RadioGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
